# Command-Prompt-Powerline

./: README.md
env-saver/: Cargo.toml
env-saver/lib-named-pipe-manager/: Cargo.toml
env-saver/lib-named-pipe-manager/src/: lib.rs
env-saver/src/: main.rs
powerline-cmd/: Cargo.toml
powerline-cmd/src/: main.rs
prompt/: prompt (deprecated).bat  prompt.bat  prompt.ps1  settings.json
