[package]
name = "environment_saver"
version = "0.1.0"
authors = ["Cherryleafroad <cherryleafroad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = "3.0.0-beta.2"
named_pipe = "0.4.1"
bufstream = "0.1.4"
serde = { version = "1.0.118", features=["derive"] }
serde_json = "1.0.61"
named-pipe-manager = { path = "lib-named-pipe-manager" }
