[package]
name = "powerline-cmd"
version = "0.1.0"
authors = ["Cherryleafroad <13651622+cherryleafroad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
ctrlc = "3.1.7"
clap = "3.0.0-beta.2"
winreg = "0.8.0"
itertools = "0.10.0"
unicase = "2.6.0"
subprocess = "0.2.6"
futures = "0.3.9"
device_query = "0.2.7"
rand = "0.8.1"
regex = "1.4.3"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1.0.1"
features = ["process", "io-util", "macros", "rt", "rt-multi-thread", "fs"]

[dependencies.winapi]
version = "0.3.9"
features = ["wincon", "processenv"]
